namespace java examples.twitter_scrooge

include "Thrift2.thrift"

struct Struct1 {
  1: Thrift2.Struct2 msg
}
